Fix horizontal scroll jog

--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -1,6 +1,7 @@
 body {
   display: grid;
   grid-template-rows: auto 1fr auto 6em;
+  overflow-x: hidden;
 }
 
 :where(#main) {
